# indexxorcist

./: .gitignore  README.md  index.html  latest.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  history.rs  maintenance.rs  mod.rs  profiles.rs
src-tauri/src/db/: connection.rs  history.rs  mod.rs  queries.rs
src-tauri/src/models/: types.rs
src/api/: tauri.ts
src/components/: UpdateBanner.tsx
src/components/about/: AboutModal.tsx
src/components/dashboard/: DatabaseCard.tsx  IndexDetailDrawer.tsx  MaintenanceDashboard.tsx  OverallProgressBar.tsx  ProgressRing.tsx  RunControls.tsx  SkeletonCard.tsx
src/components/databases/: DatabaseSelector.tsx  OptionsPanel.tsx
src/components/history/: HistoryView.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/profiles/: ProfileCard.tsx  ProfileFormModal.tsx  ProfileList.tsx
src/components/summary/: ResultsSummary.tsx
src/hooks/: useDialogA11y.ts  useElapsedTime.ts  useMaintenanceEvents.ts  useUpdater.ts
src/i18n/: index.ts  translations.ts
src/store/: databaseSelectionStore.ts  historyStore.ts  i18nStore.ts  maintenanceStore.ts  profileSettingsStore.ts  profileStore.ts  themeStore.ts  uiStore.ts
src/types/: index.ts
